[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-document-dates>=3.5.2",
    "mkdocs-material>=9.7.1",
]

[[uv.index.tool]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
